RESOLVED FIXED125660
[Cocoa] Let the load delegate know when the Web process crashes
https://bugs.webkit.org/show_bug.cgi?id=125660
Summary [Cocoa] Let the load delegate know when the Web process crashes
mitz
Reported 2013-12-12 14:59:38 PST
[Cocoa] Let the load delegate know when the Web process crashes
Attachments
Add -browsingContextControllerWebProcessDidCrash: (2.99 KB, patch)
2013-12-12 15:41 PST, mitz
sam: review+
mitz
Comment 1 2013-12-12 15:41:16 PST
Created attachment 219129 [details] Add -browsingContextControllerWebProcessDidCrash:
mitz
Comment 2 2013-12-12 15:46:26 PST
Note You need to log in before you can comment on or make changes to this bug.